--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -16,3 +16,6 @@ sphinx :
   configuration : docs/conf.py
 
 #python requirments to build the documentation
+python :
+  intall :
+    - requirements: docs/requirements.txt
